err/caucase.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/caucase'...
Compiling './lib/python3.5/site-packages/caucase/cli.py'...
***   File "./lib/python3.5/site-packages/caucase/cli.py", line 68
    print self._client.createCertificateSigningRequest(csr_pem), csr_path
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caucase/test.py'...
***   File "./lib/python3.5/site-packages/caucase/test.py", line 61
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caucase/utils.py'...
***   File "./lib/python3.5/site-packages/caucase/utils.py", line 220
    ), e:
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caucase/wsgi.py'...
***   File "./lib/python3.5/site-packages/caucase/wsgi.py", line 297
    except exceptions.CertificateAuthorityException, e:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caucase-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pem'...
Listing './lib/python3.5/site-packages/pem-17.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
